--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
             <div>
                 <label>
                     Jūsų vardas:
-                    <input type="text" placeholder="Jūsų vardas" name="name" formmethod="get">
+                    <input required type="text" placeholder="Jūsų vardas" name="name" formmethod="get" minlength="2"
+                        maxlength="50">
                 </label>
             </div>
             <div>
                 <label>
                     Jūsų pavardė:
-                    <input type="text" placeholder="Jūsų pavardė" name="lastname" formmethod="get">
+                    <input required type="text" placeholder="Jūsų pavardė" name="lastname" formmethod="get" minlength="2"
+                        maxlength="50">
                 </label>
             </div>
             <div>
                 <label>
                     Telefono numeris:
-                    <input type="text" placeholder="Jūsų telefono numeris" name="phonenumber" formmethod="get">
+                    <input required type="text" placeholder="Jūsų telefono numeris" name="phonenumber" formmethod="get"
+                        minlength="5" maxlength="11" pattern="\+?\d+">
                 </label>
             </div>
         </fieldset>
@@ -36,7 +39,8 @@
             <legend>Užklausa</legend>
             <label>
                 Jūsų žinutė:
-                <textarea placeholder="Jūsų žinutė..." name="message" formmethod="get"></textarea>
+                <textarea required placeholder="Jūsų žinutė..." name="message" formmethod="get" minlength="20"
+                    maxlength="500"></textarea>
             </label>
         </fieldset>
         <button type="submit">Pateikti</button>
