namų darbas su lable ir form

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <div>
                 <label>
                     Jūsų pavardė:
-                    <input required type="text" placeholder="Jūsų pavardė" name="lastname" formmethod="get" minlength="2"
-                        maxlength="50">
+                    <input required type="text" placeholder="Jūsų pavardė" name="lastname" formmethod="get"
+                        minlength="2" maxlength="50">
                 </label>
             </div>
             <div>
                 <label>
                     Telefono numeris:
                     <input required type="text" placeholder="Jūsų telefono numeris" name="phonenumber" formmethod="get"
-                        minlength="5" maxlength="11" pattern="\+?\d+">
+                        minlength="5" maxlength="12" pattern="\+?\d+">
                 </label>
             </div>
         </fieldset>
